// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mon-Header Component should match snapshot with complete component 1`] = `
<div
  className="m_header"
>
  <span>
    4 groups
  </span>
</div>
`;

exports[`Mon-Header Component should match snapshot with no content 1`] = `null`;

exports[`Mon-Header Component should match snapshot with you-may-know message 1`] = `
<div
  className="m_header"
>
  <span>
    4 followers you might know
  </span>
</div>
`;
